| Summary: | ASTERISK-28252: HangupHandler manager events are never thrown | ||
| Reporter: | Gerald Schnabel (geraldsf) | Labels: | patch |
| Date Opened: | 2019-01-21 09:45:37.000-0600 | Date Closed: | 2019-01-23 09:47:24.000-0600 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Core/Stasis |
| Versions: | GIT | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) manager_channels.c_hangup_handler_cb.patch | |
| Description: | HangupHandler manager events HangupHandlerPush, HangupHandlerPop and HangupHandlerRun are never thrown in manager_channels.c#channel_hangup_handler_cb() because the action/type in the stasis message is compared against {{"type"}} (3 times), but should be {{"run"}}, {{"pop"}} and {{"push"}}.
This is a regression of ASTERISK-21462, git commit 06be846. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2019-01-21 09:45:38.473-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Gerald Schnabel (geraldsf) 2019-01-21 09:47:06.891-0600 Patch against master added: [^manager_channels.c_hangup_handler_cb.patch] By: Joshua C. Colp (jcolp) 2019-01-22 06:36:26.756-0600 Do you plan on following the Gerrit process linked in the initial comment to get this included, or do you need someone else to do so? By: Gerald Schnabel (geraldsf) 2019-01-22 15:30:37.793-0600 Submitted to gerrit! By: Friendly Automation (friendly-automation) 2019-01-23 09:47:25.748-0600 Change 10912 merged by Friendly Automation: manager_channels: Fix throwing of HangupHandler manager events [https://gerrit.asterisk.org/10912|https://gerrit.asterisk.org/10912] By: Friendly Automation (friendly-automation) 2019-01-23 09:53:03.567-0600 Change 10911 merged by Joshua C. Colp: manager_channels: Fix throwing of HangupHandler manager events [https://gerrit.asterisk.org/10911|https://gerrit.asterisk.org/10911] By: Friendly Automation (friendly-automation) 2019-01-23 09:53:26.277-0600 Change 10910 merged by Joshua C. Colp: manager_channels: Fix throwing of HangupHandler manager events [https://gerrit.asterisk.org/10910|https://gerrit.asterisk.org/10910] | ||